fix logo alignment issue

--- a/src/assets/styles/pages/app-header.scss
+++ b/src/assets/styles/pages/app-header.scss
@@ -83,3 +83,7 @@
     color: #fff;
   }
 }
+
+.small-head .logo-text {
+  margin-right: 0;
+}
